--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ python:
 install:
 - pip install -r requirements.txt
 script:
-- pep8 --exclude=tofdata .
+- pycodestyle --exclude=tofdata .
 - nosetests
 deploy:
   provider: openshift
