one more await, a CLI starting point, and one less param

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,9 @@ build-backend = "hatchling.build"
 [tool.hatch.build.targets.sdist]
 packages = ["src/tofbot"]
 
+[project.scripts]
+tofbot = "tofbot:main"
+
 [tool.ruff.lint]
 select = ["E", "F"]
 
